--- a/.github/workflows/dev-daily.yml
+++ b/.github/workflows/dev-daily.yml
@@ -12,3 +12,6 @@ jobs:
           uses: dailydotdev/action-devcard@2.2.0
           with:
             devcard_id: ${{ secrets.DEVCARD_ID }}
+            commit_branch: devcard
+            commit_filename: devcard.png
+            commit_message: "chore: update ${filename}"
